konflux-ci/namespace-lister/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: namespace-lister
  namespace: namespace-lister
  labels:
    apps: namespace-lister
  annotations:
    ignore-check.kube-linter.io/no-anti-affinity: "Using topologySpreadConstraints"
spec:
  selector:
    matchLabels:
      apps: namespace-lister
  replicas: 1
  template:
    metadata:
      labels:
        apps: namespace-lister
    spec:
      serviceAccountName: namespace-lister
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            apps: namespace-lister
      containers:
      - args:
        - -enable-tls
        - -cert-path=/var/tls/tls.crt
        - -key-path=/var/tls/tls.key
        name: namespace-lister
        image: quay.io/konflux-ci/namespace-lister:foo
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 20m
            memory: 64Mi
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            drop:
            - "ALL"
        volumeMounts:
        - name: tls
          mountPath: /var/tls
          readOnly: true
      volumes:
      - name: tls
        secret:
          secretName: namespace-lister-tls
      terminationGracePeriodSeconds: 60
