konflux-ci/namespace-lister/deny-virtual-domain.yaml
# Copied from https://github.com/redhat-appstudio/infra-deployments/blob/be393d878e33b77da36c48907cad0906fed5cb73/components/policies/production/base/namespace-lister/deny-virtual-domain/deny-virtual-domain.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-virtual-domain
spec:
  validationFailureAction: Enforce
  rules:
  - name: deny-virtual-domain-labels-annotations
    skipBackgroundRequests: true
    match:
      any:
      - resources:
          kinds:
          - /v1/Namespace
          selector:
            matchLabels:
              konflux-ci.dev/type: tenant
          operations:
          - CREATE
          - UPDATE
    validate:
      allowExistingViolations: true
      cel:
        expressions:
        - expression: '!object.metadata.labels.exists(key, key.startsWith("virtual.konflux-ci.dev/"))'
          message: "Tenant namespaces can not have labels with domain 'virtual.konflux-ci.dev'"
        - expression: '!has(object.metadata.annotations) || !object.metadata.annotations.exists(key, key.startsWith("virtual.konflux-ci.dev/"))'
          message: "Tenant namespaces can not have annotations with domain 'virtual.konflux-ci.dev'"
